--- a/movies-app/src/App.css
+++ b/movies-app/src/App.css
@@ -10,4 +10,18 @@ body {
     transform: translateY(-10px);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   }
+
+.footer {
+  display: flex;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+}
+
+.buttonPagination {
+  padding-bottom: 50px;
+}
   
